# iracing-adaptive-coach

./: .cursorrules  .cursorrules_conversational.md  .cursorrules_humor_guide.md  .cursorrules_update.md  .gitignore  LICENSE  README.md  learning_memory.json  pyproject.toml
.cursor/commands/: close-week.md  store-current-session-for-week.md  update-learning-memory.md  (+2 more)
blog/: astro.config.mjs  netlify.toml  package-lock.json  package.json
cars/: car-ray-ff1600.md
data/: Garage 61 - Lonn Ponn - Ray FF1600 - Winton Motor Raceway (National Circuit) - 01.26.439 - 01KDAWVAEK79DMWXX8A1H9NYN4.csv  Garage 61 - Master Lonn - Ray FF1600 - Lime Rock Park (Grand Prix) - 00.57.444 - 01KDQZM87N38QEV1M09J43APE5.csv  Garage 61 - Master Lonn - Ray FF1600 - Winton Motor Raceway (National Circuit) - 01.26.417 - 01KDD3CQT7E5F5P02ZQYHC1WAT.csv
docs/: ibt-coaching-system-plan.md  race-schedule.md  research-experiment-01-focused-practice-threshold.md  weight-transfer-guide.md
experiments/: research-experiment-01-focused-practice-threshold.md  research-experiment-02-voice-telemetry-correlation.md
guidebook/: PROJECT_SUMMARY.md  README.md
tests/: __init__.py  conftest.py  test_smoke.py
tools/: README.md
tracks/: track-circuit-de-ledenon.md  track-lime-rock-park-grand-prix.md  track-motorsport-arena-oschersleben-grand-prix.md  track-oran-park-raceway-grand-prix.md  track-rudskogen-motorsenter.md  track-summit-point-jefferson-circuit.md  track-summit-point-main-circuit.md  track-virginia-international-raceway-north.md  track-winton-motor-raceway-national.md
weeks/: README.md
(+458 files in other folders)
